<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <include layout="@layout/ab2"
        android:id="@+id/sp_ab"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EBEBEB"

        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/sblay"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="10dp"

                android:background="@color/white"
                >

                <!-- -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="bottom"
                    android:drawableLeft="@drawable/sfb_draw"
                    android:drawableStart="@drawable/sfb_draw"
                    android:padding="5dp"
                    android:drawablePadding="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/feedback"
                    android:id="@+id/tv_sfb" />

                <TextView  android:id="@+id/tv_faq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="bottom"
                    android:drawableLeft="@drawable/faq_draw"
                    android:drawableStart="@drawable/faq_draw"
                    android:drawablePadding="10dp"
                    android:padding="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/faqs"/>
                <TextView  android:id="@+id/tv_akd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="bottom"
                    android:drawableLeft="@drawable/akd_draw"
                    android:drawableStart="@drawable/akd_draw"
                    android:padding="5dp"
                    android:drawablePadding="10dp"

                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/a_kd"/>

                <TextView  android:id="@+id/tv_aapp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="bottom"
                    android:drawableLeft="@drawable/aapp_draw"
                    android:drawableStart="@drawable/aapp_draw"
                    android:padding="5dp"
                    android:drawablePadding="10dp"

                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/a_app"/>



            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/line2"
                />



        </RelativeLayout>

        <LinearLayout android:id="@+id/sblay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp"

            android:paddingBottom="30dp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            android:weightSum="1">





            <TextView  android:id="@+id/tv_scall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="5dp"

                android:layout_gravity="bottom"
                android:drawableLeft="@drawable/call_draw"
                android:drawableStart="@drawable/call_draw"
                android:drawablePadding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/call"/>

            <TextView  android:id="@+id/tv_smail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="bottom"
                android:drawableLeft="@drawable/mail_draw"
                android:drawableStart="@drawable/mail_draw"
                android:padding="5dp"
                android:drawablePadding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/cmail"/>


        </LinearLayout>

    </RelativeLayout>


</LinearLayout>


